packages/components/bolt-nav-priority/nav-priority.scss
/* ------------------------------------ *\
   Nav
\* ------------------------------------ */

@import '@bolt/core';


bolt-nav-priority {
  display: block;
  position: relative;
  align-self: center;
  padding-bottom: var(--bolt-vspacing);

  @supports (display: contents) {
    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
      &.is-ready {
        display: contents;
      }
    }
  }

  &:not(.is-ready) {
    overflow-x: auto;
  }

  &.is-resizing {
    overflow: hidden;
  }
}

.c-bolt-nav-priority {
  @supports (display: contents) {
    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
      &.is-ready {
        display: contents;
      }
    }
  }


  &:not(.is-ready) {
    // @TODO: uncomment once themify updates are merged in
    // background-image: -webkit-linear-gradient(left, themify(background), hsla(0, 0%, 100%, 0)),
    // -webkit-linear-gradient(right, themify(background), hsla(0, 0%, 100%, 0)),
    // -webkit-linear-gradient(left, themify(background-dark), rgba(234, 240, 246, 0)),
    // -webkit-linear-gradient(right, themify(background-dark), rgba(234, 240, 246, 0));
    // background-color: themify(background);

    // @TODO: remove once themify updates are merged in
    // .t-bolt-xdark & {
    //   background-image: -webkit-linear-gradient(left, bolt-color(indigo, dark), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(right, bolt-color(indigo, dark), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(left, bolt-color(indigo, xdark), rgba(234, 240, 246, 0)),
    //   -webkit-linear-gradient(right, bolt-color(indigo, xdark), rgba(234, 240, 246, 0));
    //   background-color: bolt-color(indigo, dark);
    // }

    // .t-bolt-dark & {
    //   background-image: -webkit-linear-gradient(left, bolt-color(indigo), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(right, bolt-color(indigo), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(left, bolt-color(indigo, dark), rgba(234, 240, 246, 0)),
    //   -webkit-linear-gradient(right, bolt-color(indigo, dark), rgba(234, 240, 246, 0));
    //   background-color: bolt-color(indigo);
    // }

    // .t-bolt-light & {
    //   background-image: -webkit-linear-gradient(left, bolt-color(gray, xlight), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(right, bolt-color(gray, xlight), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(left, bolt-color(gray, light), rgba(234, 240, 246, 0)),
    //   -webkit-linear-gradient(right, bolt-color(gray, light), rgba(234, 240, 246, 0));
    //   background-color: bolt-color(gray, light);
    // }

    // &,
    // .t-bolt-xlight & {
    //   background-image: -webkit-linear-gradient(left, bolt-color(white), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(right, bolt-color(white), hsla(0, 0%, 100%, 0)),
    //   -webkit-linear-gradient(left, bolt-color(gray, xlight), rgba(234, 240, 246, 0)),
    //   -webkit-linear-gradient(right, bolt-color(gray, xlight), rgba(234, 240, 246, 0));
    //   background-color: bolt-color(gray, xlight);
    // }

    -webkit-overflow-scrolling: touch;
    background-attachment: local, local, scroll, scroll;
    background-position: 0 0, 100% 0, 0 0, 100% 0;
    background-repeat: no-repeat;
    background-size: 4em 100%, 4em 100%, 1em 100%, 1em 100%;
    overflow-x: auto;

    // .c-bolt-nav-priority__item {
    //   background-color: transparent;
    // }
  }

  .is-hidden {
    display: none;
  }
}

.c-bolt-nav-priority__show-button {
  width: 100%;
  height: 100%;
  display: block;
  // color: themify(text); // @TODO: uncomment once themify updates are merged in

  // @TODO: remove once themify updates are merged in
  .t-bolt-dark &,
  .t-bolt-xdark & {
    color: bolt-color(white);
  }

  // @TODO: remove once themify updates are merged in
  &,
  .t-bolt-light &,
  .t-bolt-xlight & {
    color: bolt-color(indigo);
  }

  background-color: transparent;
}

.c-bolt-nav-priority__primary {
  @supports (display: contents) {
    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
      .is-ready & {
        display: contents;
      }
    }
  }

  display: flex;
  list-style: none;
  margin: 0;
}

.c-bolt-nav-priority__item {
  display: flex;
  flex-shrink: 0;
  white-space: nowrap;
}

// required so the dropdown can be positioned consistently
.c-bolt-nav-priority__show-more {
  position: relative;
}




@supports (display: contents) {
   .c-bolt-nav-priority__show-more {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       display: contents;
     }
   }
 }


.c-bolt-nav-priority__dropdown-list {
  // background-color: themify(primary, 0.95); // @TODO: uncomment once themify updates are merged in

  // @TODO: remove once themify updates are merged in
  .t-bolt-dark &,
  .t-bolt-xdark & {
    background-color: rgba(bolt-color(indigo), 0.95);
  } // @TODO: remove once themify updates are merged in
  &,
  .t-bolt-light &,
  .t-bolt-xlight & {
    background-color: rgba(bolt-color(white), 0.95);
  }


  list-style: none;
  margin: 0;
  width: 100%;

  @include bolt-padding-top(xsmall);
  @include bolt-padding-bottom(xsmall);
  @include bolt-padding-left(small);
  @include bolt-padding-right(small);

  @include respond-to(small){
    @include bolt-padding-left(xsmall);
    @include bolt-padding-right(xsmall);
  }
}

.c-bolt-nav-priority__dropdown {
  @include bolt-z-index(tooltip);
  box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
  min-width: 12rem;
  display: none;
  position: absolute;
  top: 100%;
  right: 0;
  animation: nav-dropdown 0.2s;
  width: calc(100vw - #{bolt-spacing(large)});
  max-width: 100vw;
  transform: translate3d(0, 0, 0);

  // background-color: themify(secondary); // @TODO: uncomment once themify updates are merged in
  // @TODO: remove once themify updates are merged in
  .t-bolt-dark &,
  .t-bolt-xdark &,
  .t-bolt-light &,
  .t-bolt-light & {
    background-color: bolt-color(white);
  }

  border-bottom-left-radius: $bolt-border-radius;
  border-bottom-right-radius: $bolt-border-radius;

  * {
    white-space: normal;
  }

  @include respond-to(xsmall) {
    width: auto;
    max-width: 100%;
  }






  @supports (display: contents) {
    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
      grid-row: 2/span 1;
      grid-column: 1/span 6;
      position: static;
      width: auto;
    }
  }

  .c-bolt-nav-priority--show-dropdown & {
    display: block;
  }
}


// keyframes
@keyframes nav-dropdown {
  0% {
    opacity: 0;
    transform: translateY(-1em);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}



.c-bolt-nav-priority__show-button {
  @include bolt-padding(small, squished);
  // Added border so that &:after,&:focus doesn't change the size of the band
  // We should consider making this thin dotted style a mixin to share with nav-priority
  border-width: thin;
  border-style: dotted;
  border-radius: 3px;
  border-color: transparent;
  border-radius: $bolt-border-radius;
  white-space: nowrap;
  transition: background-color 0.3s ease;

  // background-color: themify(secondary, 0.05); // @TODO: uncomment once themify updates are merged in
  // @TODO: remove once themify updates are merged in
  &,
  .t-bolt-dark &,
  .t-bolt-xdark &,
  .t-bolt-light &,
  .t-bolt-light & {
    background-color: rgba(bolt-color(white), 0.05);
  }

  cursor: pointer;
  position: relative;

  @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
    border-radius: 0;

    // border-left: 1px solid themify(secondary, 0.1); // @TODO: uncomment once themify updates are merged in
    // @TODO: remove once themify updates are merged in
    &,
    .t-bolt-dark &,
    .t-bolt-xdark &,
    .t-bolt-light &,
    .t-bolt-light & {
      border-left: rgba(bolt-color(white), 0.1);
    }
  }

  &:before {
    position: absolute;
    content: '';
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    pointer-events: none;
    opacity: 0;
    pointer-events: none;

    // background-color: themify(primary, 0.95); // @TODO: uncomment once themify updates are merged in
    // @TODO: remove once themify updates are merged in
    .t-bolt-dark &,
    .t-bolt-xdark & {
      background-color: rgba(bolt-color(indigo), 0.95);
    }

    &,
    .t-bolt-light &,
    .t-bolt-xlight & {
      background-color: rgba(bolt-color(gray), 0.95);
    }

    overflow: hidden;
    z-index: 1;
  }


  &:hover {
    // background-color: themify(secondary, 0.15); // @TODO: uncomment once themify updates are merged in

    // @TODO: remove once themify updates are merged in
    &,
    .t-bolt-dark &,
    .t-bolt-xdark &,
    .t-bolt-light &,
    .t-bolt-light & {
      background-color: rgba(bolt-color(white), 0.15);
    }

    &:before {
      opacity: 0.1;
    }
  }

  &:focus,
  &.is-active {
    outline: none;
    border-color: var(--bolt-theme-primary,inherit);
    }

  &.is-active,
  &:active {
    // background-color: themify(secondary, 0.1); // @TODO: uncomment once themify updates are merged in
    // @TODO: remove once themify updates are merged in
    &,
    .t-bolt-dark &,
    .t-bolt-xdark &,
    .t-bolt-light &,
    .t-bolt-light & {
      background-color: rgba(bolt-color(white), 0.1);
    }

    &:before {
      opacity: 0.1;
    }
  }

  @supports (display: contents) {
    @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
      .is-ready & {
        grid-row: 1/span 1;
        grid-column: 5/span 1;
      }
    }
  }
}

.c-bolt-nav-priority__show-text {
  @include bolt-font-size(small);
  @include bolt-font-weight(semibold);
  position: relative;
  z-index: 10;

  @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
    @include bolt-visuallyhidden;
  }
}

.c-bolt-nav-priority__show-icon {
  display: inline-block;
  transition: transform 0.2s;
  position: relative;
  z-index: 10;
  line-height: 0;
  font-size: 1em;

  @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
    font-size: 24px;
  }

  .c-bolt-nav-priority--show-dropdown & {
    transform: rotate(180deg);
  }
}



// bolt-nav-priority {
//   @include bolt-css-vars((
//     --bolt-nav-priority-item-opacity: 0,
//     --bolt-nav-priority-item-transform: translateY(bolt-spacing(large) * -1),
//   ));

//   &[open*=true]{
//       @include bolt-css-vars((
//         --bolt-nav-priority-item-opacity: 1,
//         --bolt-nav-priority-item-transform: none,
//       ));
//   }
// }




// .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item {
//   transform: var(--bolt-nav-priority-item-transform, none);
//   opacity: var(--bolt-nav-priority-item-opacity, 1);
//   transition: opacity 0.35s ease-out, transform 0.35s ease-out; // transition:

//   // .c-bolt-dropdown--collapse\@small & {
//   //   @include respond-to(small) {
//   //     opacity: 1;
//   //     transform: translateY(0);
//   //   }
//   // }
// }



// @for $quantity from 1 through 12 {
//   $time: 0;

//   @for $i from $quantity through 1 {
//     $time: $time + 50;
//     .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item:nth-last-child(n+#{$quantity}),
//     .c-bolt-nav-priority__dropdown-list > .c-bolt-nav-priority__item:nth-last-child(n+#{$quantity}) ~ .c-bolt-nav-priority__item:nth-child(#{$i}) {
//       transition-delay: $time + ms;
//     }
//   }
// }
//   // $time: $time + 50;
//   //   transition-delay: $time + ms;
//   // }
// // }




// .c-bolt-nav-priority--show-dropdown .c-bolt-nav-priority__item {
// // .c-bolt-nav-priority--show-dropdown+.c-bolt-dropdown .c-bolt-nav-priority__item,
// // .c-bolt-dropdown__content--opened .c-bolt-nav-priority__item {
//   // opacity: 1;
//   // transform: none;
//   @include bolt-css-vars((
//     --bolt-nav-priority-item-opacity: 1,
//     --bolt-nav-priority-item-transform: none,
//   ));
// }

